--- a/init.org
+++ b/init.org
@@ -542,22 +542,6 @@ Because I'm trying this out, I'm going to disable LSP's breadcrumb mode, which I
 (setq show-paren-when-point-inside-paren 't)
 (setq show-paren-style 'mixed)
 (setq show-paren-context-when-offscreen 't)
-
-(use-package
- elec-pair
- :config ;; Disable electric pair in minibuffer
- (defun my/inhibit-electric-pair-mode (char)
-   (or (minibufferp) (electric-pair-conservative-inhibit char)))
- (setq electric-pair-inhibit-predicate
-       #'my/inhibit-electric-pair-mode)
-
- (electric-pair-mode t)
- ;; The ‘<’ and ‘>’ are not ‘parenthesis’, so give them no compleition.
- (setq electric-pair-inhibit-predicate
-       (lambda (c)
-         (or (member c '(?< ?> ?~))
-             (electric-pair-default-inhibit c)))))
-
 (setq show-paren-context-when-offscreen t)
 (setq show-paren-style 'mixed)
 
@@ -569,6 +553,34 @@ Because I'm trying this out, I'm going to disable LSP's breadcrumb mode, which I
 ;; Show matching parens
 (setq show-paren-delay 0)
 (show-paren-mode t)
+#+end_src
+*** Electric Pair
+#+begin_src emacs-lisp :load no
+(use-package
+  elec-pair
+  :config ;; Disable electric pair in minibuffer
+  (defun my/inhibit-electric-pair-mode (char)
+    (or (minibufferp) (electric-pair-conservative-inhibit char)))
+  (setq electric-pair-inhibit-predicate
+        #'my/inhibit-electric-pair-mode)
+(electric-pair-mode t)
+;; The ‘<’ and ‘>’ are not ‘parenthesis’, so give them no compleition.
+(setq electric-pair-inhibit-predicate
+      (lambda (c)
+        (or (member c '(?< ?> ?~))
+            (electric-pair-default-inhibit c)))))
+#+end_src
+*** Smartparens
+#+begin_src emacs-lisp :load yes
+(use-package
+ smartparens
+ :hook (prog-mode . smartparens-mode)
+ :hook (text-mode . smartparens-mode)
+ :hook (org-mode . smartparens-mode)
+ :hook (markdown-mode . smartparens-mode)
+ :config
+ ;; load default config
+ (require 'smartparens-config))
 #+end_src
 ** Rsync-mode
 Loving use of my old colleague [[https://github.com/r-zip][Ryan Pilgrim]]'s package to sync accross our secure environments. Edit: Now trying out handcrafted Unison mode.
@@ -2049,6 +2061,7 @@ This really improves use with local variables. You get a highly visible warning 
   ("C-c C-c" . org-ctrl-c-ctrl-c)
   ("C-M-<return>" . my/org-babel-execute-and-next)
   ("C-c <" . nil)
+  ("M-g o" . consult-org-heading)
   :map
   org-src-mode-map
   ("C-x C-s" . org-src-format-and-save))
@@ -2057,10 +2070,10 @@ This really improves use with local variables. You get a highly visible warning 
        (plist-put org-format-latex-options :scale 2.0))
  (setq org-latex-create-formula-image-program 'dvisvgm)
 
-(defun my/org-babel-execute-and-next ()
-  (interactive)
-  (org-babel-execute-src-block)
-  (org-babel-next-src-block))
+ (defun my/org-babel-execute-and-next ()
+   (interactive)
+   (org-babel-execute-src-block)
+   (org-babel-next-src-block))
 
  (org-babel-do-load-languages
   'org-babel-load-languages
