--- a/init.org
+++ b/init.org
@@ -1057,32 +1057,41 @@ From [[https://github.com/minad/corfu/wiki#configuring-corfu-for-eglot][this sou
   (marginalia-mode))
 #+end_src
 ** Embark
-#+begin_src emacs-lisp :load no
-(use-package
- embark
- :demand t
- :bind
- (("C-." . embark-act) ;; pick some comfortable binding
-  ;; ("C-;" . embark-dwim) ;; good alternative: M-.
-  ("C-h B" . embark-bindings)) ;; alternative for `describe-bindings'
+#+begin_src emacs-lisp :load yes
+(use-package embark
+  :ensure t
+  :bind
+  (("C-." . embark-act)         ;; pick some comfortable binding
+   ;; ("C-;" . embark-dwim)        ;; good alternative: M-.
+   ("C-h B" . embark-bindings)) ;; alternative for `describe-bindings'
 
- :init
- ;; Optionally replace the key help with a completing-read interface
- (setq prefix-help-command #'embark-prefix-help-command)
- :config
- ;; Hide the mode line of the Embark live/completions buffers
- (add-to-list
-  'display-buffer-alist
-  '("\\`\\*Embark Collect \\(Live\\|Completions\\)\\*"
-    nil
-    (window-parameters (mode-line-format . none)))))
+  :init
+
+  ;; Optionally replace the key help with a completing-read interface
+  (setq prefix-help-command #'embark-prefix-help-command)
+
+  ;; Show the Embark target at point via Eldoc. You may adjust the
+  ;; Eldoc strategy, if you want to see the documentation from
+  ;; multiple providers. Beware that using this can be a little
+  ;; jarring since the message shown in the minibuffer can be more
+  ;; than one line, causing the modeline to move up and down:
+
+  ;; (add-hook 'eldoc-documentation-functions #'embark-eldoc-first-target)
+  ;; (setq eldoc-documentation-strategy #'eldoc-documentation-compose-eagerly)
+
+  :config
+
+  ;; Hide the mode line of the Embark live/completions buffers
+  (add-to-list 'display-buffer-alist
+               '("\\`\\*Embark Collect \\(Live\\|Completions\\)\\*"
+                 nil
+                 (window-parameters (mode-line-format . none)))))
 
 ;; Consult users will also want the embark-consult package.
-(use-package
- embark-consult
- :ensure t ; only need to install it, embark loads it after consult if found
- :after consult
- :hook (embark-collect-mode . consult-preview-at-point-mode))
+(use-package embark-consult
+  :ensure t ; only need to install it, embark loads it after consult if found
+  :hook
+  (embark-collect-mode . consult-preview-at-point-mode))
 #+end_src
 ** Consult
 #+begin_src emacs-lisp :load yes
@@ -2158,6 +2167,9 @@ This really improves use with local variables. You get a highly visible warning 
     'org-babel-load-languages '((jupyter . t)))
    (org-babel-jupyter-aliases-from-kernelspecs 'refresh))
  (visual-line-mode t)
+
+ ; Org-babel stuff
+ (setf (alist-get "bash" org-src-lang-modes) "bash-ts")
 
  (setq org-log-done t)
 
